<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/search_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MovieDetailPage">

    <TextView
        android:id="@+id/movie_title_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/movie_title" />

    <ImageView
        android:id="@+id/movie_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movie_popularity" />

    <TextView
        android:id="@+id/movie_language_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/movie_title_title"
        app:layout_constraintTop_toTopOf="@+id/movie_language" />

    <TextView
        android:id="@+id/movie_popularity_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/movie_title_title"
        app:layout_constraintTop_toTopOf="@+id/movie_popularity" />

    <TextView
        android:id="@+id/movie_popularity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/search_movie_popularity"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/movie_language"
        app:layout_constraintTop_toBottomOf="@+id/movie_language" />

    <TextView
        android:id="@+id/movie_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/search_movie_title"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.613"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/movie_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="24dp"
        android:text="@string/search_movie_language"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/movie_title"
        app:layout_constraintTop_toBottomOf="@+id/movie_title" />

</android.support.constraint.ConstraintLayout>